--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
         <title>MailGuy</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <link rel="stylesheet" href="">
     </head>
     <body>
@@ -19,7 +20,7 @@
                 </p>
             </div>
             <form class="md:w-[50rem] flex flex-col items-center gap-2">
-                <div class="grid md:grid-cols-[150px_400px] gap-6 mb-10 text-left items-center">
+                <div class="grid md:grid-cols-[150px_250px] gap-6 mb-10 text-left items-center">
                     <label for="student-name">Student Name:</label>
                     <input class="border border-black" type="text" id="sname" name="student-name">
                     <label for="student-details">Student Details:<br>(Optional)</label>
@@ -34,25 +35,12 @@
                         <option>Event Participation</option>
                         <option>Others</option>
                     </select>
-                    <label for="date">Date:</label>
-                    <div id="date-range-picker" date-rangepicker class="flex items-center">
-                        <div class="relative">
-                            <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-                               </svg>
-                           </div>
-                           <input id="datepicker-range-start" name="start" type="text" class="border border-black block w-full ps-10 placeholder:text-sm" placeholder="Select date start">
-                        </div>
-                        <span class="mx-4">to</span>
-                        <div class="relative">
-                            <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-                                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                                 <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
-                               </svg>
-                           </div>
-                           <input id="datepicker-range-end" name="end" type="text" class="border border-black block w-full ps-10 placeholder:text-sm" placeholder="Select date end">
-                        </div>
+                    <label for="date">Date & Time:</label>
+                    <div class="flex flex-col gap-3">
+                        <p class="block md:hidden">From:</p>
+                        <input class="dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-start" name="datestart" placeholder="Select DateTime start">
+                        <p class="block md:hidden">To:</p>
+                        <input class="dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-end" name="dateend" placeholder="Select DateTime end">
                     </div>
                     <label for="otherDetails">Other Details:</label>
                     <textarea id="otherDetails" name="otherdetails" class="border border-black placeholder:text-sm text-gray" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
@@ -64,5 +52,15 @@
         </div>
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script>
+            flatpickr(".dateTime", {
+                enableTime: true,
+                altInput: true,
+                altFormat: "F j, Y H i",
+                dateFormat: "d-m-Y h:i",
+                minDate: "today",
+            });
+        </script>
     </body>
 </html>
