fix reset function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
                     <textarea id="otherDetails" name="otherdetails" class="border border-black placeholder:text-sm text-gray" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
                 </div>
                 <input class="border border-black w-36" type="submit" value="Submit">
-                <input class="border border-black w-36" type="reset" value="Reset">
+                <input class="border border-black w-36" type="button" value="Reset" onclick="location.href='/';">
             </form>
             <h1>Generated Response:</h1>
         </div>
