fix otherReason input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,7 +75,7 @@
                 minDate: "today",
             });
             const dropdown = document.getElementById("reason");
-            const otherInput = document.getElementById("otherInput");
+            const otherInput = document.getElementById("otherReason");
             dropdown.addEventListener("change", function() {
             if (dropdown.value === "others") {
                 otherInput.classList.remove("hidden");
