--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,12 +67,13 @@
             </div>
 <% if (locals.response){ %> 
             <div id="responseSection" class="my-10 h-screen flex flex-col items-center justify-center">
-                <div class="md:w-[50rem] flex flex-col justify-center items-center">
+                <div class="md:w-[50rem] flex flex-col justify-center items-center  gap-2">
                     <h1 class="text-center bg-white text-7xl font-bold">Generated Response:</h1>
                     <div class="text-left">
                         <pre class="text-wrap font-sans mt-10"><%= response %></pre>
                     </div>
                     <a href="<%= mailto %>" type="button" class="text-center w-36 border border-black">Send Mail</a>
+                    <a href="/" class="text-center w-36 border border-black" type="button" >Reset</a>
                 </div>
             </div>
 <% } %>
