--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,9 +23,9 @@
                 </div>
             </div>
             <div class="h-screen w-full text-center flex flex-col gap-2 items-center justify-center " >
-                <div class="md:w-[50rem]">
-                    <h1 class="bg-white text-7xl font-bold">MailGuy</h1>
-                    <p class="bg-white text-gray-500 text-lg">
+                <div class="">
+                    <h1 class="bg-white text-[80px] font-bold">Online AI Email Writer</h1>
+                    <p class="bg-white text-gray-500 text-lg md:w-[50rem]">
                         MailGuy is your go-to assistant for crafting perfect emails powered by the Google Gemini API.
                         Just fill out the simple form, provide the necessary details 
                         and MailGuy will generate a polished email for you in seconds with a single click.
@@ -36,7 +36,7 @@
                     <p class="text-2xl bg-white">2. Generate the Email</p>
                     <p class="text-2xl bg-white">3. Send the Email</p>
                 </div>
-                <a href="#formsSection" type="button" class="mt-5 text-xl text-center w-48 border border-black">Start Writing</a>
+                <a href="#formsSection" type="button" class="mt-5 mb-[80px] text-xl text-center w-48 border border-black">Start Writing</a>
             </div>
             <div id="formsSection" class="h-screen my-10 flex flex-col items-center justify-center gap-5">
                 <h1 class="bg-white text-7xl font-bold">Fill the Form:</h1>
