add links to navbar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,12 +17,12 @@
                     <a class="text-4xl font-bold">MailGuy</a>
                 </div>
                 <div class="text-lg basis-1/2 justify-end flex place-items-center gap-5 mx-7">
-                    <a>Home</a>
-                    <a>Form</a>
-                    <a>Guide</a>
+                    <a href="#Home">Home</a>
+                    <a href="#formsSection">Form</a>
+                    <a href="#instructionsSection">Guide</a>
                 </div>
             </div>
-            <div class="h-screen w-full text-center flex flex-col gap-2 items-center justify-center " >
+            <div id="Home" class="h-screen w-full text-center flex flex-col gap-2 items-center justify-center " >
                 <div class="">
                     <h1 class="bg-white text-[80px] font-bold">Online AI Email Writer</h1>
                     <p class="bg-white text-gray-500 text-lg md:w-[50rem]">
@@ -88,7 +88,7 @@
             </div>
 <% } %>
              <div id="instructionsSection" class="h-screen my-10 flex flex-col items-center justify-evenly">
-                <h1 class="text-6xl mt-[150px] font-bold">
+                <h1 class="text-6xl mt-[80px] text-center font-bold">
                     Step-by-Step Instructions to Use MailGuy
                 </h1>
                 <ol class="w-[25rem] my-10 flex flex-col gap-5 justify-evenly list-decimal text-left">
