add response link to navbar on condition

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,9 @@
                 <div class="text-lg basis-1/2 justify-end flex place-items-center gap-5 mx-7">
                     <a href="#Home">Home</a>
                     <a href="#formsSection">Form</a>
+                    <% if (locals.response){ %> 
+                    <a href="#responseSection">Response</a>
+                    <% } %>
                     <a href="#instructionsSection">Guide</a>
                 </div>
             </div>
