add minor change

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
             </div>
             <div id="Home" class="h-screen w-full text-center flex flex-col gap-5 items-center justify-center " >
                 <div class="">
-                    <h1 class="bg-white mt-[80px] text-[80px] font-bold">Online AI Email Writer</h1>
+                    <h1 class="bg-white  text-[80px] font-bold">Online AI Email Writer</h1>
                     <p class="bg-white text-gray-500 text-lg md:w-[50rem]">
                         MailGuy is your go-to assistant for crafting perfect emails powered by the Google Gemini API.
                         Just fill out the simple form, provide the necessary details 
